documents/examples/type_checking/auto4.latf
auto f() {
    println("Hello, world!");
    return; // needed to know that the return type is void
}

auto g() {
    return 1;
}

auto h() {
    return lambda (int x, int y) -> auto . x + y;
}

int main() {
    // auto x = f(); // error
    auto x = g(); // OK
    println(x); // 1
    // x = h(); // error
    auto x = h(); // OK
    println(x(1, 2)); // 3

    return 0;
}